--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
           "type": "number",
           "default": 1000,
           "description": "Timeout for jump select."
+        },
+        "smartf.changeLines": {
+          "type": "boolean",
+          "default": false,
+          "description": "Change lines instead of use conceal highlight."
         }
       }
     }
