--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "clean": "rimraf lib",
-    "build": "tsc -p tsconfig.json",
+    "build": "webpack",
     "prepare": "npx npm-run-all clean build"
   },
   "activationEvents": [
@@ -53,11 +53,12 @@
     "@types/node": "^11.13.10",
     "coc.nvim": "^0.0.69",
     "rimraf": "^2.6.3",
+    "ts-loader": "^6.0.3",
     "tslint": "^5.16.0",
-    "typescript": "^3.5.1"
-  },
-  "dependencies": {
-    "tslib": "^1.9.3",
+    "typescript": "^3.5.1",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
     "vscode-languageserver-types": "^3.14.0"
-  }
+  },
+  "dependencies": {}
 }
