--- a/package.json
+++ b/package.json
@@ -46,6 +46,50 @@
           "type": "array",
           "default": [],
           "description": "Characters will not become a character for navigator"
+        },
+        "smartf.characters": {
+          "type": "array",
+          "default": [
+              "a",
+              "b",
+              "c",
+              "d",
+              "e",
+              "f",
+              "g",
+              "h",
+              "i",
+              "j",
+              "k",
+              "l",
+              "m",
+              "n",
+              "o",
+              "p",
+              "q",
+              "r",
+              "s",
+              "t",
+              "u",
+              "v",
+              "w",
+              "x",
+              "y",
+              "z",
+              "1",
+              "2",
+              "3",
+              "4",
+              "5",
+              "6",
+              "7",
+              "8",
+              "9",
+              "0",
+              ",",
+              "."
+          ],
+          "description": "List of jump characters"
         }
       }
     }
