--- a/package.json
+++ b/package.json
@@ -55,13 +55,12 @@
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
     "@types/node": "^10.17.19",
-    "coc.nvim": "^0.0.79",
+    "coc.nvim": "^0.0.79-next.14",
     "rimraf": "^2.6.3",
     "ts-loader": "^6.0.3",
-    "typescript": "^3.5.1",
+    "typescript": "^4.1.3",
     "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "vscode-languageserver-types": "^3.14.0"
+    "webpack-cli": "^3.3.4"
   },
   "dependencies": {}
 }
