--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "coc": "^0.0.73"
   },
   "scripts": {
-    "clean": "rimraf lib",
-    "build": "webpack",
-    "prepare": "webpack"
+    "build": "node esbuild.js",
+    "prepare": "node esbuild.js"
   },
   "activationEvents": [
     "*"
@@ -54,13 +53,10 @@
   "license": "MIT",
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
-    "@types/node": "^10.17.19",
-    "coc.nvim": "^0.0.79-next.14",
-    "rimraf": "^2.6.3",
-    "ts-loader": "^6.0.3",
-    "typescript": "^4.1.3",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "@types/node": "^12.12.0",
+    "coc.nvim": "^0.0.81-next.6",
+    "esbuild": "^0.12.22",
+    "typescript": "^4.1.3"
   },
   "dependencies": {}
 }
